<resources>
    <string name="app_name">AndroidReceipts</string>

    <!-- StartActivity strings !-->
    <string name="welcome_message">Welcome to AndroidReceipt!</string>
    <string name="continue_instruction">Press Continue to proceed.</string>
    <string name="continue_button">Continue</string>

    <!-- TablesActivity strings !-->
    <string name="create_table_button">New Table</string>

    <!-- CreateTableDialog strings !-->
    <string name="create_table_instructions">Enter a name for the table:</string>
    <string name="create_table_confirm_button">Confirm</string>
    <string name="create_table_cancel_button">Cancel</string>
    <string name="empty_name_notification">Please enter a name.</string>

    <!-- ReceiptsActivity strings !-->
    <string name="start_date_button">Change start date</string>
    <string name="end_date_button">Change end date</string>
    <string name="placeholder_date">DD--MM--YYYY</string>
    <string name="search_instruction">Search</string>
    <string name="search_button">GO!</string>
    <string name="receipts_total">Total:</string>
    <string name="receipts_total_sum_placeholder">0.00</string>

    <!-- CreateReceiptDialog strings !-->
    <string name="create_receipt_title">Create new receipt</string>
    <string name="create_receipt_sum_instruction">Sum :</string>
    <string name="create_receipt_desc_instruction">Description :</string>
    <string name="create_receipt_date_instruction">Date :</string>
    <string name="create_receipt_change_date_button">Change date</string>
    <string name="create_receipt_create_button">Create</string>
    <string name="create_receipt_cancel_button">Cancel</string>
    <string name="create_receipt_sum_empty">Please enter the sum</string>
    <string name="create_receipt_desc_empty">Please give a short description</string>

    <!-- RemoveDialog strings !-->
    <string name="remove_receipt_title">Are you sure you want to delete this receipt?</string>
    <string name="remove_table_title">Are you sure you want to delete this table?</string>
    <string name="remove_receipt_yes">Yes</string>
    <string name="remove_receipt_no">No</string>


    <!-- Toolbar strings !-->
    <string name="settings">Settings</string>
    <string name="new_receipt">New Receipt</string>
    <string name="new_table">New Table</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_tables">Tables</string>
    <string name="title_activity_receipts">Receipts</string>


    <!-- Settings strings !-->
    <string name="language">Language</string>
    <string name="langDefVal">en</string>
    <string-array name="langs">
        <item name="en">English</item>
        <item name="fi">Finnish</item>
    </string-array>
    <string-array name="langVals">
        <item name="en">en</item>
        <item name="fi">fi</item>
    </string-array>

</resources>
