<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="250dp"
    android:gravity="center"
    android:background="#0000FF">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_receipt_title"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_receipt_sum_instruction"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:background="#FFFFFF"
            android:textColor="#000000"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            android:id="@+id/create_receipt_sum_field"
            android:maxLines="1"
            android:textAlignment="textEnd"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_receipt_desc_instruction"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:maxLength="100"
        android:id="@+id/create_receipt_desc_field"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_receipt_date_instruction"
            android:textSize="20sp"
            android:layout_weight="0.6"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_date"
            android:textSize="20sp"
            android:layout_weight="1"
            android:id="@+id/create_receipt_date_field"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_receipt_change_date_button"
            android:textSize="20sp"
            android:layout_weight="1"
            android:id="@+id/create_receipt_date_button"
            android:background="@drawable/border"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_receipt_create_button"
            android:id="@+id/create_receipt_create_button"
            android:background="@drawable/border"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_receipt_cancel_button"
            android:id="@+id/create_receipt_cancel_button"
            android:background="@drawable/border"/>


    </LinearLayout>

</LinearLayout>