<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".StartActivity">

    <include
        android:id="@+id/tb"
        layout="@layout/tool_bar"
        ></include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textStyle="bold"
        android:id="@+id/welcome_message"
        android:layout_above="@+id/continue_instructions"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="61dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/continue_instruction"
        android:id="@+id/continue_instructions"
        android:layout_above="@+id/continue_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_button"
        android:id="@+id/continue_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp" />

</RelativeLayout>
