<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="necspe.androidreceipts.ReceiptsActivity">


    <include
        android:id="@+id/tb"
    layout="@layout/tool_bar"
    ></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/tb">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/placeholder_date"
                android:layout_weight="0.3"
                android:textAlignment="center"
                android:id="@+id/start_date_text"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/start_date_button"
                android:id="@+id/start_date_button"
                android:layout_weight="1"
                android:textAlignment="center"
                android:background="@drawable/border"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/placeholder_date"
                android:layout_weight="0.3"
                android:textAlignment="center"
                android:id="@+id/end_date_text"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/end_date_button"
                android:id="@+id/end_date_button"
                android:layout_weight="1"
                android:textAlignment="center"
                android:background="@drawable/border"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="Search"
                android:layout_weight="0.3"
                android:textAlignment="center"/>



            <Button
                android:id="@+id/search_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="GO!"
                android:layout_weight="1"
                android:textAlignment="center"
                android:background="@drawable/border"/>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"
        android:layout_below="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/receipts_layout">
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Total:"
            android:layout_weight="1"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="####.##€"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:textSize="15sp"
            android:id="@+id/total_sum_field"/>

    </LinearLayout>

</RelativeLayout>
